--- a/todo-list-using-single-file/index.html
+++ b/todo-list-using-single-file/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>todo-list-using-single-file</title
+    <title>todo-list-using-single-file</title>
     <!-- import CSS -->
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
     <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
